--- a/catalogo/templates/index.html
+++ b/catalogo/templates/index.html
@@ -1,15 +1,233 @@
-{% extends "base_generic.html" %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block content %}
-<h1>Local Library</h1>
+<head>
 
-    <p>Welcome to <em>LocalLibrary</em>, Django website</p>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- <meta name="description" content="">
+  <meta name="author" content=""> -->
 
-<h2>Dynamic content</h2>
+  <title>Nice&Cheap</title>
 
-    <p>The Library has</p>
-    <ul>
-        <li><strong>Books:</strong> {{ num_prenda }}</li>
-    </ul>
+  <!--                   CSS DE BOOTSTRAP                      -->
+  {% load static %}<link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
 
-{% endblock %}
+  <!--                   CSS                                   -->
+  {% load static %}<link href="{% static 'css/modern-business.css' %}" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <!--                          NAV                              -->
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Nice&Cheap</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{%url 'about' %}">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{%url 'contact' %}">Contacto</a>
+          </li>
+          <li>
+            <a class="nav-link" href="{%url 'sidebar' %}">Tienda</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <header>
+    <!--                                                           -->
+    <!--                          CARRUSEL                         -->
+    <!--                                                           -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <!--                        HOMBRES               -->
+        <div class="carousel-item active" style="background-image: url('https://www.freejpg.com.ar/image-900/59/5920/F100009822-perchero_con_ropa.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Hombres</h3>
+          </div>
+        </div>
+        <!--                         MUJERES              -->
+        <div class="carousel-item" style="background-image: url('http://lacasatecno.com/wp-content/uploads/2017/09/la-casa-tecno-eliminar-electricidad-estatica-1.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Mujeres</h3>
+          </div>
+        </div>
+        <!--                         NIÑOS                 -->
+        <div class="carousel-item" style="background-image: url('https://media.informabtl.com/wp-content/uploads/2017/10/marcas-de-ropa-ma%CC%81s-valiosas-2017-retail.jpg')">
+          <div class="carousel-caption d-none d-md-block">
+            <h3>Niños</h3>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Atras</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Siguiente</span>
+      </a>
+    </div>
+  </header>
+
+  <!-- CONTENIDO DE LA PAG -->
+  
+  <div class="container">
+
+    <h1 class="my-4">Bienvenido a Nice&Cheap</h1>
+
+    <!--                  EL OTRO TIPO DE CATALOGO QUE PENSAMOS            -->
+    <!--                                                                   -->
+    <!-- <div class="row">
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100">
+          <h4 class="card-header">Card Title</h4>
+          <div class="card-body">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100">
+          <h4 class="card-header">Card Title</h4>
+          <div class="card-body">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 mb-4">
+        <div class="card h-100">
+          <h4 class="card-header">Card Title</h4>
+          <div class="card-body">
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+          </div>
+          <div class="card-footer">
+            <a href="#" class="btn btn-primary">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </div> -->
+    
+    <!-- /.row -->
+
+    <!--                   CATALOGO DE PROYECTOS             -->
+    <!--                                                     -->
+    <div class="row">
+      <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="{%url 'sidebar' %}">{% load static %}<img class="card-img-top" src="{% static 'img/hombre1.jpg' %}" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="{%url 'sidebar' %}">Apartado N°1</a>
+            </h4>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="{%url 'sidebar' %}">{% load static %}<img class="card-img-top" src="{% static 'img/hombre2.jpg' %}" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="sidebar.html">Project Two</a>
+            </h4>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="{%url 'sidebar' %}">{% load static %}<img class="card-img-top" src="{% static 'img/mujer1.jpg' %}" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="{%url 'sidebar' %}">Project Three</a>
+            </h4>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="{%url 'sidebar' %}">{% load static %}<img class="card-img-top" src="{% static 'img/mujer2.jpg' %}" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="{%url 'sidebar' %}">Project Four</a>
+            </h4>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="{%url 'sidebar' %}">{% load static %}<img class="card-img-top" src="{% static 'img/niños1.jpg' %}" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="{%url 'sidebar' %}">Project Five</a>
+            </h4>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 portfolio-item">
+        <div class="card h-100">
+          <a href="{%url 'sidebar' %}">{% load static %}<img class="card-img-top" src="{% static 'img/niño3.jpg' %}" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="{%url 'sidebar' %}">Project Six</a>
+            </h4>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <hr>
+    <!-- 
+    <div class="row mb-4">
+      <div class="col-md-8">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+      </div>
+      <div class="col-md-4">
+        <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
+      </div>
+    </div> -->
+
+  </div>
+
+  <!--                               Footer                          -->
+  <!--                                                               -->
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Nice&Cheap 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  {% load static %}<script src="vendor/jquery/jquery.min.js"></script>
+  {% load static %}<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
+
+</html>
