--- a/catalogo/templates/sidebar.html
+++ b/catalogo/templates/sidebar.html
@@ -128,9 +128,16 @@
               <a href="#"><img class="card-img-top" src="{% static 'img/ropa2.jpg' %}" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Project Five</a>
+                  <a href="#">$4.990</a>
                 </h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                <p class="card-text">Sweater Stat XX Reciclado</p>
+                <br>
+                <p class="card-text">
+                  Item: Sweater Stat XX Reciclado. <br>
+                  Color: Multicolor. <br>
+                  Talla: L. <br>
+                  Material: Acrílico. <br>
+                  Condición: Vintage óptima.</p>
               </div>
             </div>
           </div>
@@ -139,9 +146,16 @@
               <a href="#"><img class="card-img-top" src="{% static 'img/ame5.jpg' %}" alt="ropa3"></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Project Six</a>
+                  <a href="#">$6.900</a>
                 </h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
+                <p class="card-text">Vestido Denim Miumiu Vintage</p>
+                <br>
+                <p class="card-text">
+                  Item: Vestido con dos bolsillos superiores y falda tableada. <br>
+                  Color: Azul Marino. <br>
+                  Talla: M. <br>
+                  Material: Algodón. <br>
+                  Condición: Vintage óptima.</p>
               </div>
             </div>
           </div>
