--- a/catalogo/templates/index.html
+++ b/catalogo/templates/index.html
@@ -30,6 +30,12 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
+            <a class="nav-link" href="{%url 'login' %}">Cuenta</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{%url 'logout' %}">Logout</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{%url 'about' %}">Nosotros</a>
           </li>
           <li class="nav-item">
@@ -225,13 +231,8 @@
   </footer>
 
   <!-- Bootstrap core JavaScript -->
-<<<<<<< HEAD
-  {% load static %}<script src="vendor/jquery/jquery.min.js"></script>
-  {% load static %}<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-=======
   {% load static %}<script src="{% static 'vendor/jquery/jquery.min.js' %}"></script>
   {% load static %}<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
->>>>>>> carrousel
 
 </body>
 
