--- a/catalogo/templates/sidebar.html
+++ b/catalogo/templates/sidebar.html
@@ -154,7 +154,7 @@
                   Item: Vestido con dos bolsillos superiores y falda tableada. <br>
                   Color: Azul Marino. <br>
                   Talla: M. <br>
-                  Material: Algodón. <br>
+                  Material: Algodón0. <br>
                   Condición: Vintage óptima.</p>
               </div>
             </div>
